--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -9,18 +9,18 @@
 	</div>
 	<div class="secondblockfooter">
 		<span class="findusfooter">გვიპოვეთ</span>
-		<img class="socialicons" src="{% static '/icons/fb.png' %}">
-		<img class="socialicons" src="{% static '/icons/tw.png' %}">
+		<a href="https://www.facebook.com/IDFI.official"><img class="socialicons" src="{% static '/icons/fb.png' %}"></a>
+		<a href="https://twitter.com/IDFIGeorgia"><img class="socialicons" src="{% static '/icons/tw.png' %}"></a>
 		<img class="socialicons" src="{% static '/icons/yt.png' %}">
 		<img class="socialicons" src="{% static '/icons/ig.png' %}">
 		<span class="contuctusfooter">დაგვიკავშირდით</span>
 		<div class="footercontactyldivs">
 			<img class="contacticons" src="{% static '/icons/Iconphone.png' %}">
-			<span class="contactinfo">+995 322 2 92 15 14</span>
+			<a class="contactinfo" href="tel:+995-322-2-92-15-14">+995 322 2 92 15 14</a>
 		</div>
 		<div class="footercontactyldivs" style="margin-left: 180px;">
 			<img class="contacticons" src="{% static '/icons/Iconemail.png' %}">
-			<span class="contactinfo">info@idfi.ge</span>
+			<a class="contactinfo" href = "mailto:idfi@info.ge">info@idfi.ge</a>
 		</div>
 	</div>
 	<div class="verticalline"></div>
@@ -31,8 +31,9 @@
 <div class="mobilefooter">
 	<center>
 		<span class="mobilefooterfindus">გვიპოვეთ</span>
-		<img class="socialicons" src="{% static '/icons/fb.png' %}">
-		<img class="socialicons" src="{% static '/icons/tw.png' %}">
+		<a href="https://www.facebook.com/IDFI.official">
+			<img class="socialicons" src="{% static '/icons/fb.png' %}"></a>
+		<a href="https://twitter.com/IDFIGeorgia"><img class="socialicons" src="{% static '/icons/tw.png' %}"></a>
 		<img class="socialicons" src="{% static '/icons/yt.png' %}">
 		<img class="socialicons" src="{% static '/icons/ig.png' %}">
 
@@ -40,19 +41,21 @@
 
 		<div class="footercontactyldivs">
 			<img class="footercontacticons" src="{% static '/icons/Iconphone.png' %}">
-			<span class="footercontactinfo" style="margin-left: 32px;">+995 322 2 92 15 14</span>
+			<a class="footercontactinfo" style="margin-left: 32px;" href="tel:+995-322-2-92-15-14">+995 322 2 92 15 14</a>
 		</div>
 		<div class="footercontactyldivs">
 				<img class="footercontacticons" src="{% static '/icons/Iconemail.png' %}">
-				<span class="footercontactinfo" style="margin-left: 13px;">idfi@info.ge</span>
+				<a class="footercontactinfo" style="margin-left: 13px;"href = "mailto:idfi@info.ge">idfi@info.ge</a>
 		</div>
 		<span class="mobilefooteraboutproject">პროექტის ფინანსური მხარდაჭერები არიან
 		USAID და ZINC Network. პლატფორმა შექმნილია
 		IDFI-ის მიერ.</span>
 		<div class="footersupports">
-		<img class="footersupportsiconsusaid" src="{% static '/icons/usaid.png' %}">
-		<img class="footersupportsiconszinc" src="{% static '/icons/zinc.png' %}">
-		<img class="footersupportsiconsidfi" src="{% static '/icons/idfi.png' %}">
+		<a href="https://www.usaid.gov/">
+			<img class="footersupportsiconsusaid" src="{% static '/icons/usaid.png' %}"></a>
+		<a href="https://zincnetwork.com/">
+			<img class="footersupportsiconszinc" src="{% static '/icons/zinc.png' %}"></a>
+		<a href="https://idfi.ge/ge"><img class="footersupportsiconsidfi" src="{% static '/icons/idfi.png' %}"></a>
 		</div>
 
 	</center>
