--- a/static/css/aboutproject.css
+++ b/static/css/aboutproject.css
@@ -124,8 +124,9 @@ color: #3E3A2B;
 	display: inline-block;
 	margin-top: 96px;
 	margin-left: 13%;
+	text-align: justify;
 	margin-bottom: 95px;
-	width: 35%;
+	width: 70%;
 }
 
 .about_project_header{
@@ -176,6 +177,7 @@ color: #F6C042;
 	}
 	.aboutprojectmobileinfo{
 		width: 300px;
+		text-align: justify;
 		display: block;
 		margin-top: 26px;
 
