--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="{% static '/css/history.css' %}">
         <link rel="stylesheet" href="{% static '/css/mobilemenu.css' %}">
         <link rel="stylesheet" href="{% static '/css/detail_post.css' %}">
+        <link rel="stylesheet" href="{% static '/css/search.css' %}">
     </head>
 
     <body>
