--- a/gori/templates/index.html
+++ b/gori/templates/index.html
@@ -22,7 +22,7 @@
 <iframe src="https://snazzymaps.com/embed/429468" width="100%" height="600px" style="border:none;"></iframe>
 <script async
     src="https://maps.googleapis.com/maps/api/js?v=quarterly
-        &key=AIzaSyBQAuKvUDilNX3uXRm29S-Mx7A7ylN5SYk&callback=initMap">
+        &key=AIzaSyBQAuKvUDilNX3uXRm29S-Mx7A7ylN5SYk&v=3">
 </script>
 
 </div>
