--- a/gori/templates/index.html
+++ b/gori/templates/index.html
@@ -19,11 +19,12 @@
 		<a class="sendusbutton" >
 			<span class="sendusbuttontext">{% t "text_us_button" %}</span></a>
 	</div>
+
 <iframe src="https://snazzymaps.com/embed/429468" width="100%" height="600px" style="border:none;"></iframe>
-<script async
-    src="https://maps.googleapis.com/maps/api/js?v=quarterly
-        &key=AIzaSyBQAuKvUDilNX3uXRm29S-Mx7A7ylN5SYk&v=3">
+<script
+    src="https://maps.googleapis.com/maps/api/js?v=3.50&key=AIzaSyBQAuKvUDilNX3uXRm29S-Mx7A7ylN5SYk&callback" async defer>
 </script>
+
 
 </div>
 
