--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -12,7 +12,7 @@
     <a class="menuitem3" href="{% url 'culture' lang=lang %}">{% t "culture" %}</a>
     <a class="menuitem4" href="{% url 'architect' lang=lang %}">{% t "architect" %}</a>
     <a class="menuitem5" href="">{% t "humans" %}</a>
-    <a class="menuitem6" href="">{% t "textus" %}</a>
+    <a class="menuitem6" href="{% url 'text_us' lang=lang %}">{% t "textus" %}</a>
 
 <div id="myNavSearch" class="overlaysearch">
   <div class="overlaysearch-content">
