--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="{% static '/css/mobilemenu.css' %}">
         <link rel="stylesheet" href="{% static '/css/detail_post.css' %}">
         <link rel="stylesheet" href="{% static '/css/search.css' %}">
+        <link rel="stylesheet" href="{% static '/css/textus.css' %}">
     </head>
 
     <body>
