--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -20,7 +20,7 @@
 		</div>
 		<div class="footercontactyldivs" style="margin-left: 180px;">
 			<img class="contacticons" src="{% static '/icons/Iconemail.png' %}">
-			<a class="contactinfo" href = "mailto:idfi@info.ge">info@idfi.ge</a>
+			<a class="contactinfo" href = "mailto:gorimaps@idfi.ge">gorimaps@idfi.ge</a>
 		</div>
 	</div>
 	<div class="verticalline"></div>
@@ -45,7 +45,8 @@
 		</div>
 		<div class="footercontactyldivs">
 				<img class="footercontacticons" src="{% static '/icons/Iconemail.png' %}">
-				<a class="footercontactinfo" style="margin-left: 13px;"href = "mailto:idfi@info.ge">idfi@info.ge</a>
+				<a class="footercontactinfo" style="margin-left: 
+				32px;"href = "mailto:gorimaps@idfi.ge">gorimaps@idfi.ge</a>
 		</div>
 		<span class="mobilefooteraboutproject">პროექტის ფინანსური მხარდაჭერები არიან
 		USAID და ZINC Network. პლატფორმა შექმნილია
