--- a/static/css/IIblock.css
+++ b/static/css/IIblock.css
@@ -31,7 +31,7 @@ color: #F6C042;
 position: block;
 overflow-wrap: break-word;
 display: inline-block;
-width: 75%;
+width: 100%;
 height: 182px;
 padding-top: 35px;
 text-align: justify;
@@ -265,6 +265,9 @@ color: #848177;
 }
 
 @media only screen and (min-width: 1331px) and (max-width: 1615px) {
+	.aboutprojecttext{
+		width: 75% !important;
+	}
 	.line2{
 position: block !important;
 width: 90% !important;
