--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -87,7 +87,7 @@
         <a href="{% url 'culture' lang=lang %}" class="mobilemenuitem">კულტურა</a>
         <a href="{% url 'architect' lang=lang %}" class="mobilemenuitem">არქიტექტურა</a>
         <a href="#" class="mobilemenuitem">ადამიანები</a>
-        <a href="#" class="mobilemenuitem">მოგვწერეთ</a>
+        <a href="{% url 'text_us' lang=lang %}" class="mobilemenuitem">მოგვწერეთ</a>
         </center>
       </div>
     </div>
